[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openenv-ticket-triage"
version = "1.0.0"
description = "Customer support ticket triage OpenEnv environment"
authors = [
    { name = "Support Team" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
